Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.2.9:

* Bit more DepSet optimizations; specifically collapses AND restriction into
  the parent if it is also an AND restriction.

* make --no-auto work correctly for pebuild

* delay DISTDIR setup till unpack phase to prevent any invalid access; also
  takes care of a pebuild traceback.


pkgcore 0.2.8:

* fix bug so that 6_alpha == 6_alpha0 when native_CPV is in use; only possible
  way to have hit the bug is having all extensions disabled (CPY version gets it
  right).

* add a trigger to rewrite symlink targets if they point into ${D}

* info trigger now ignores any file starting with '.'; no more complaints about
  .keep in info dirs.

* if an ebuild has a non-default preinst and offset merging, a rescan of ${D}
  is required- offset wasn't being injected, fixed.

* if offset merging for a binpkg, reuse the original contentsSet class-
  this prevents quadratic (worst case) seeking of the tarball via preserving
  the ordering.

* if merging a binpkg and a forced decompression is needed, update the
  cset in memory instead of forcing a scan of ${D}.

* misc filter-env fixes, cleanup, and tests.

* change var attr (exported/readonly) env storage to better interop with 
  the others; internally, we still delay the var attr/shopt resetting till
  execution.

* misc initialization fixes to syncers for when invoked via GenericSyncer.
  If previously layman integration wasn't working for you, should now.

* shift the misc fs property triggers to pre_merge, rather then sanity_check;
  sanity_check should be only for "do I have what I need to even do the merge?"
  and minimal setup for the op (for example, transfering files into workdir).
  Running preinst was occasionally wiping the changes the triggers made, thus
  allowing screwed up ebuilds with custom preinst's to slip in a portage gid
  for merge.
